# rustffitest

./: Cargo.toml  librustffi.dylib  test.c
.cargo/: config.toml
src/: lib.rs
