[package]
name = "rustffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libc = "0.2"
# ndarray = { version = "0.15.6", default-features = false }
panic-halt = "0.2.0"
[lib]
crate-type = ["staticlib"]
